{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 34,
  "lineage": "63c043fa-b120-832a-bb54-646c9ccbe992",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789967404966:security-group/sg-0e9755b9ba788eb78",
            "description": "Security Group for EKS cluster",
            "egress": [],
            "id": "sg-0e9755b9ba788eb78",
            "ingress": [],
            "name": "cloudgeeks.ca-dev-eks",
            "name_prefix": "",
            "owner_id": "789967404966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudgeeks.ca-dev-eks",
              "Namespace": "cloudgeeks.ca",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01be9acf190d3e5e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-3320429309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e9755b9ba788eb78",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow the cluster to receive communication from the worker nodes",
            "from_port": 0,
            "id": "sgrule-3344286882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e9755b9ba788eb78",
            "self": false,
            "source_security_group_id": "sg-0b781f790cbfebdb8",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789967404966:security-group/sg-0b781f790cbfebdb8",
            "description": "Security Group for EKS worker nodes",
            "egress": [],
            "id": "sg-0b781f790cbfebdb8",
            "ingress": [],
            "name": "cloudgeeks.ca-dev-eks-workers",
            "name_prefix": "",
            "owner_id": "789967404966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudgeeks.ca-dev-eks-workers",
              "Namespace": "cloudgeeks.ca",
              "Stage": "dev",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01be9acf190d3e5e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-2596247100",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b781f790cbfebdb8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker kubelets and pods to receive communication from the cluster control plane",
            "from_port": 0,
            "id": "sgrule-1501727781",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b781f790cbfebdb8",
            "self": false,
            "source_security_group_id": "sg-0e9755b9ba788eb78",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_security_group.default",
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_workers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3255563584",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b781f790cbfebdb8",
            "self": false,
            "source_security_group_id": "sg-0b781f790cbfebdb8",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_workers.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0cceed123aa1a56e7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-221-169-164.compute-1.amazonaws.com",
            "public_ip": "54.221.169.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloudgeeks.ca-dev-eip-nat-gateway-1",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789967404966:internet-gateway/igw-07a0e3b8364b1a784",
            "id": "igw-07a0e3b8364b1a784",
            "owner_id": "789967404966",
            "tags": {
              "Name": "cloudgeeks.ca-dev-igw",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared"
            },
            "vpc_id": "vpc-01be9acf190d3e5e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cceed123aa1a56e7",
            "id": "nat-0d0d55fdd8a75e746",
            "network_interface_id": "eni-066c4a76e4b3c2481",
            "private_ip": "10.20.1.139",
            "public_ip": "54.221.169.164",
            "subnet_id": "subnet-0acf6456e4c63fa94",
            "tags": {
              "Name": "cloudgeeks.ca-dev-nat-gateway-1",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e74612a52140c4f4",
            "owner_id": "789967404966",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d0d55fdd8a75e746",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgeeks.ca-dev-private-routes-1",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared"
            },
            "vpc_id": "vpc-01be9acf190d3e5e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07fda3eef6ec2c87c",
            "owner_id": "789967404966",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d0d55fdd8a75e746",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgeeks.ca-dev-private-routes-2",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared"
            },
            "vpc_id": "vpc-01be9acf190d3e5e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f03d3f21935cdb46",
            "owner_id": "789967404966",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a0e3b8364b1a784",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudgeeks.ca-dev-public-routes",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared"
            },
            "vpc_id": "vpc-01be9acf190d3e5e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routes-linking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee15e838b988c7c2",
            "route_table_id": "rtb-0e74612a52140c4f4",
            "subnet_id": "subnet-0bbde508d76aadf94"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce4da67884a60114",
            "route_table_id": "rtb-07fda3eef6ec2c87c",
            "subnet_id": "subnet-076ecd8f490d35c30"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f75a172d1ddc545",
            "route_table_id": "rtb-0f03d3f21935cdb46",
            "subnet_id": "subnet-0acf6456e4c63fa94"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f86fbed74edae10",
            "route_table_id": "rtb-0f03d3f21935cdb46",
            "subnet_id": "subnet-029e35dd4593c821b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789967404966:subnet/subnet-0bbde508d76aadf94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-0bbde508d76aadf94",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789967404966",
            "tags": {
              "Name": "cloudgeeks.ca-dev-private-subnets-1",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01be9acf190d3e5e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789967404966:subnet/subnet-076ecd8f490d35c30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.5.0/24",
            "id": "subnet-076ecd8f490d35c30",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789967404966",
            "tags": {
              "Name": "cloudgeeks.ca-dev-private-subnets-2",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01be9acf190d3e5e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789967404966:subnet/subnet-0acf6456e4c63fa94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0acf6456e4c63fa94",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789967404966",
            "tags": {
              "Name": "cloudgeeks.ca-dev-public-subnets-1",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01be9acf190d3e5e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789967404966:subnet/subnet-029e35dd4593c821b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-029e35dd4593c821b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789967404966",
            "tags": {
              "Name": "cloudgeeks.ca-dev-public-subnets-2",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01be9acf190d3e5e3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789967404966:vpc/vpc-01be9acf190d3e5e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0a1b0e20e7f947942",
            "default_route_table_id": "rtb-09bb5f2650b3f6c50",
            "default_security_group_id": "sg-0848e8477edaee1cf",
            "dhcp_options_id": "dopt-068f865905c083ed8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01be9acf190d3e5e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09bb5f2650b3f6c50",
            "owner_id": "789967404966",
            "tags": {
              "Location": "Virginia",
              "Name": "cloudgeeks.ca-vpc-dev",
              "kubernetes.io/cluster/cloudgeeks.ca-dev-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}